2004-03-26  Guillaume Smet <guillaume-gforge@smet.org>

	* Fixed a bug in project admin interface. People admin links didn't work.
	* Fixed a typo in French.tab
	* Applied patch [ #714 ] by Lele Gaifax : updated Italian translation
	* Applied patch [ #731 ] by Jason Chen : updated Chinese translation

2004-03-26  Christian Bayle <bayle@debian.org>

	* Take in account all new vars in setup script

2004-03-25  Tim Perdue  <tim@perdue.net>

	* added users.firstname,users.lastname,users.address2,users.ccode 
	each user now can enter a complete address and choose a country.

	* added users.theme_id and dropped theme_prefs table. session.php
	now does a join against themes table to get dirname in single query.

2004-03-25  Guillaume Smet <guillaume-gforge@smet.org>

	* implemented some new config flags to enable/disable partially implemented
	features (vhost, multimedia, database)
	* added a new cronjob called tarballs.php to generate CVS tarballs. It uses a
	modified version of deb-specific/tarballs.sh (not added yet in README.root)
	* added $sys_cvs_tarballs_path in config to make tarballs generation and
	download work in mainstream
	* updated French localization

2004-03-24  Guillaume Smet <guillaume-gforge@smet.org>

	* implemented a correct management of $sys_use_people flag in all GForge

2004-03-23  Tom Copeland <tom@infoether.com>
	* www/forum/include/ForumHTML.class: Implemented RFE [ #720 ] Link 
	news items to project site.

2004-03-17  Guillaume Smet <guillaume-gforge@smet.org>

	* fixed remaining groups.type (tperdue renamed this field to type_id)
	* fixed errortext markups in installation guide

2004-03-16  Tim Perdue  <tim@perdue.net>

	* changed groups.type to groups.type_id for database portability reasons

2004-03-16  Guillaume Smet <guillaume-gforge@smet.org>

	* improved user guide and contribution guide 

2004-03-14  Guillaume Smet <guillaume-gforge@smet.org>

	* Some HTML cleanup and bugfixes.